<resources>
    <string name="app_name">LAKSNSystemTest</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="order">Order</string>
    <string name="burger">Burger</string>
    <string name="coffee">Coffee</string>
    <string name="pizza">Pizza</string>
    <string name="scan_qr">Scan QR</string>
    <string name="generate_qr">Generate QR</string>
</resources>